// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/filterComponent return filterComponent 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and add Filter 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and click is empty 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              includes
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper filterValue"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              Status
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/viewHeader/filterComponent return filterComponent and filter by status 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="FilterComponent"
    >
      <div
        class="FilterEntry"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              (unknown)
            </span>
          </button>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              (unknown)
            </span>
          </button>
        </div>
        <div
          class="octo-spacer"
        />
        <button
          class="Button"
          type="button"
        >
          <span>
            Delete
          </span>
        </button>
      </div>
      <br />
      <button
        class="Button"
        type="button"
      >
        <span>
          + Add filter
        </span>
      </button>
    </div>
  </div>
</div>
`;
